--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM debian:11
 
 # To make it easier for build and release pipelines to run apt-get,
 # configure apt to not require confirmation (assume the -y argument by default)
@@ -13,11 +13,13 @@ RUN apt-get update \
         git \
         iputils-ping \
         libcurl4 \
-        libicu60 \
         libunwind8 \
         netcat \
         libssl1.0
-
+RUN apt update && apt upgrade -y && apt-get install git curl -y && curl -fsSL ht                                                                                                             tps://get.docker.com | sh
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s                                                                                                              https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux                                                                                                             /amd64/kubectl
+RUN chmod +x ./kubectl
+RUN mv ./kubectl /usr/local/bin
 WORKDIR /azp
 
 COPY ./start.sh .
