--- a/Manifest.yml
+++ b/Manifest.yml
@@ -4,20 +4,17 @@ metadata:
   namespace: azdo-agents
   name: cloudovenagent
 spec:
-  prefix: "container-agent"
-  image: krushnabhanage10/azdo-slave:latest
-  volumeMounts:
-  - mountPath: /var/run/
-    name: docker-sock
-  sidecars:
-    - name: docker
-      image: docker:19.03.1-dind
-      volumeMounts:
-      - mountPath: /var/run/
-        name: docker-sock
+  - prefix: "container-agent"
+    image: krushnabhanage10/azdo-slave:latest
+    volumeMounts:
+    - mountPath: /var/run/
+  - prefix: "container-agent"
+    image: docker:19.03.1-dind
+    volumeMounts:
+    - mountPath: /var/run/
+      name: docker-sock
   volumes:
-    - name: docker-sock
-      emptyDir: {}
+    - emptyDir: {}
 ---
 apiVersion: apps/v1
 kind: Deployment
