--- a/Ingress/working-sample.yml
+++ b/Ingress/working-sample.yml
@@ -27,7 +27,7 @@ spec:
         pathType: Prefix
       - backend:
           service:
-            name: httpd
+            name: dotnetapp
             port:
               number: 80
         path: /(.*)
