--- a/secret.yml
+++ b/secret.yml
@@ -1,7 +1,29 @@
+# creating new svc account
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: "access-admin-acct"
+  namespace: default
+---
+# assign cluster admin role to new svc account
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: "access-admin-role"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: "access-admin-acct"
+  namespace: default
+---
+# create secret for new service account
 apiVersion: v1
 kind: Secret
 type: kubernetes.io/service-account-token
 metadata:
   name: access-token
   annotations:
-    kubernetes.io/service-account.name: "default"
+    kubernetes.io/service-account.name: "access-admin-acct"
