--- a/secret.yml
+++ b/secret.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: default
 ---
 # assign cluster admin role to new svc account
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: "access-admin-role"
